# Elegant-Coral

./: .clang-format  .gitignore  CMakeLists.txt
resources/: cube_fragment.glsl  cube_vertex.glsl
src/: camera.cpp  camera.h  camera.hpp  coral.cpp  coral.h  main.cpp  shader.cpp  shader.h  shader.hpp  window.cpp  window.h
src/glad/: glad.c  glad.h
src/util/: resources.cpp  resources.h
